--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "build": "vite build"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
+    "mockjs": "^1.1.0",
     "vue": "^3.0.4"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "vite": "^1.0.0-rc.13"
   }
 }
