--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.2.8",
+    "face-api.js": "^0.22.2",
     "mockjs": "^1.1.0",
     "vue": "^3.0.4"
   },
