--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "vue": "^3.0.4"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.4",
-    "less": "^4.1.1",
-    "vite": "^1.0.0-rc.13"
+    "@vue/compiler-sfc": "^3.2.26",
+    "less": "^4.1.2",
+    "vite": "^2.7.5"
   }
 }
